# hackathon-2026-adarsh-tiwari

./: .dockerignore  .env.example  .gitignore  Dockerfile.backend  README.md  audit_log.json  docker-compose.yml  pyproject.toml  requirements.txt
backend/: main.py  run_demo.py
backend/agent/: confidence.py  guardrails.py  prompts.py  resolver.py  triage.py
backend/api/: middleware.py  routes.py  streams.py
backend/audit/: exporters.py  logger.py  store.py
backend/core/: config.py  exceptions.py  logging_setup.py  models.py
backend/ingestion/: dead_letter.py  queue.py  worker_pool.py
backend/llm/: anthropic_client.py  base.py  factory.py  groq_client.py  ollama_client.py  openai_client.py
backend/tools/: datastore.py  kb_search.py  mock_tools.py  resilience.py  tool_registry.py
benchmarks/: BASELINE_v1.md  baseline_v1_7of20.json  baseline_v1_audit.jsonl  baseline_v2_13of50.json
data/: customers.json  dataset_manifest.json  orders.json  products.json  tickets_combined_50.json
docs/: FAILURE_MODES.md
frontend/: .env.development  .env.docker  Dockerfile  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.jsx  index.css  main.jsx
frontend/src/components/features/: CategoryChart.jsx  DatasetSwitcher.jsx  LiveFeed.jsx  (+6 more)
frontend/src/hooks/: useDatasets.js  useLiveStream.js  useMetrics.js  useTickets.js
frontend/src/lib/: api.js  formatters.js  sse.js
frontend/src/pages/: About.jsx  AuditLog.jsx  Dashboard.jsx  TicketDetail.jsx  Tickets.jsx
frontend/src/stores/: useSentinelStore.js
(+11 files in other folders)
